Added postition reported with names

--- a/BuildingEscape/Config/DefaultGame.ini
+++ b/BuildingEscape/Config/DefaultGame.ini
@@ -1,5 +1,8 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=F2B4F8B34D90500B6DCD4D924E2BD158
+CompanyName=UdemyTest
+CompanyDistinguishedName=UdemyTest
+CopyrightNotice=No Copyright
 
 [StartupActions]
 bAddPacks=True
